[metadata]
name = teletype
version = attr: teletype.VERSION
description = A high-level cross platform tty library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkwill87/teletype

license = MIT
license_files = LICENSE.txt

author = Jessy Williams
author_email = jessy@jessywilliams.com
maintainer = Jessy Williams
maintainer_email = jessy@jessywilliams.com

keywords = tty cli terminal
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Terminals

[options]
python_requires = >=3.7
packages = find:
zip_safe = True

[options.package_data]
* = LICENSE.txt,README.md,py.typed

[options.extras_require]
ci =
    build~=0.7.0
    black~=22.1.0
    isort~=5.10.1
    mypy~=0.931
    wheel~=0.37.1
